--- a/v/humor_1.html
+++ b/v/humor_1.html
@@ -29,56 +29,56 @@
         <h1>유머 게시판</h1>
         <ul style="list-style: none; padding: 0;">
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./알고보니-남편이-결혼-전-연애하던-시절-소개팅한-걸-알게된-아내-꿀잼.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">남편이 결혼 전 연애하던 시절 소개팅한 걸 알게된 아내</h2>
+            <a href="./화제의-분양-보냈더니-8km-거리를-돌아온-강아지-해설.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">분양 보냈더니 8km 거리를 돌아온 강아지</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./충격반전-호감인지-착각인지-알려줘.jpg-모먼트.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">호감인지 착각인지 알려줘.jpg</h2>
+            <a href="./경악-아내에게-핸드폰-공기계-빌려줬다가-뭔가를-들켜버린-남편-대참사-기록.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">아내에게 핸드폰 공기계 빌려줬다가 ‘뭔가’를 들켜버린 남편 대참사</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./놀라운-와이프가-남직원이랑-바람이나서-폐업한-족발집-정보.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">와이프가 남직원이랑 바람이나서 폐업한 족발집</h2>
+            <a href="./충격반전-도로-한복판에서-사진-찍는-청사포-민폐-커플-레전드-비하인드.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">도로 한복판에서 사진 찍는 청사포 민폐 커플 레전드</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./최초-산불-음모론-퍼트리다-주한미군에게-한소리-들은-애국보수-정리.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">산불 음모론 퍼트리다 주한미군에게 한소리 들은 애국보수</h2>
+            <a href="./필독-160cm-키작남이-말하는-현실-꿀잼.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">160cm 키작남이 말하는 현실</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./충격-장르소설갤-난리나게한-어느-웹소설-작가가-연재를-중단한-이유-비결.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">장르소설갤 난리나게한 어느 웹소설 작가가 연재를 중단한 이유</h2>
+            <a href="./필독-오버워치-핵쟁이가-4시간만-쓰고-핵을-버린-이유-비하인드.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">오버워치 핵쟁이가 4시간만 쓰고 핵을 버린 이유</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./전격-손찌검하는-아내를-간단한-방법으로-치료한-남편-후기.html" style="text-decoration: none; color: #333; display: block;">
+            <a href="./충격-맨손으로-미국에서-컵밥집하다가-인도네시아-200개-지점-낸-비결-진실.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">맨손으로 미국에서 컵밥집하다가 인도네시아 200개 지점 낸 비결</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./궁금-챗GPT로-만평-만들다가-생긴-대참사-모음.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">챗GPT로 만평 만들다가 생긴 대참사</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./극과극-손찌검하는-아내를-간단한-방법으로-치료한-남편-꿀팁.html" style="text-decoration: none; color: #333; display: block;">
                 <h2 style="margin: 0; font-size: 18px;">손찌검하는 아내를 간단한 방법으로 치료한 남편</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./대유행-담배-피우던-고딩-셋이-평범한-딸바보-아저씨를-건들면-벌어지는-일-모음.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">담배 피우던 고딩 셋이 평범한 딸바보 아저씨를 건들면 벌어지는 일</h2>
+            <a href="./충격-김희철이-2019년-산불에-기부한-걸-티낼-수-밖에-없었던-이유-정보.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">김희철이 2019년 산불에 기부한 걸 티낼 수 밖에 없었던 이유</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./최초-여고생-여동생이-친오빠에게-카톡하는-이유-노하우.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">여고생 여동생이 친오빠에게 카톡하는 이유</h2>
-            </a>
-        </li>
-        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./강추-편집자-구인글-올렸다가-억까-당하고-해명글-올린-랄로-꿀팁.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">편집자 구인글 올렸다가 억까 당하고 해명글 올린 랄로</h2>
-            </a>
-        </li>
-        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./충격적-현재-최여진-결혼-발표에-할리우드냐고-놀라는-이유-모음.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">현재 최여진 결혼 발표에 할리우드냐고 놀라는 이유</h2>
+            <a href="./절대-한-아이돌지망생이-오디션만-보면-떨어졌던-이유-대반전.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">한 아이돌지망생이 오디션만 보면 떨어졌던 이유</h2>
             </a>
         </li></ul>
-        <div class="pagination" style="margin-top: 20px; text-align: center;"><span style="margin: 0 5px; padding: 5px 10px; background-color: #f0f0f0; border-radius: 3px;">1</span><a href="./humor_2.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">2</a><a href="./humor_2.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">▶</a></div>
+        <div class="pagination" style="margin-top: 20px; text-align: center;"><span style="margin: 0 5px; padding: 5px 10px; background-color: #f0f0f0; border-radius: 3px;">1</span><a href="./humor_2.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">2</a><a href="./humor_3.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">3</a><a href="./humor_2.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">▶</a></div>
     </div>
     
     <!-- 하단 네비게이션 바 추가 -->
