--- a/v/humor_2.html
+++ b/v/humor_2.html
@@ -29,56 +29,56 @@
         <h1>유머 게시판</h1>
         <ul style="list-style: none; padding: 0;">
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./충격-지하-3층에-핵-방공호까지-있다는-국내-최초-500억원대-아파트-대반전.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">지하 3층에 핵 방공호까지 있다는 국내 최초 500억원대 아파트</h2>
+            <a href="./신기한-한국-케이팝-문화에-문제가-있다는-뉴진스-궁금증.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">한국 케이팝 문화에 문제가 있다는 뉴진스</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./긴급-사진으로-체험해보는-뉴욕-월세집들-꿀잼.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">사진으로 체험해보는 뉴욕 월세집들</h2>
+            <a href="./강추-커플팰리스에-나온-월-300만원-남자와-결혼하려는-여자-모음.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">커플팰리스에 나온 월 300만원 남자와 결혼하려는 여자</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./충격반전-키스하는-게-업무인-직원과-결혼한-사장이-후회하는-이유-노하우.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">키스하는 게 업무인 직원과 결혼한 사장이 후회하는 이유</h2>
+            <a href="./완전-김새론-전남친이-말하는-김새론이-죽은-진짜-이유-후기.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">김새론 전남친이 말하는 김새론이 죽은 진짜 이유</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./단독-신발을-너무-싸게-팔았으니-사용중이면-돈-보내라는-판매자-현실.html" style="text-decoration: none; color: #333; display: block;">
+            <a href="./화제의-어느-유부녀가-남편-먹일-밥-짓다-지은-시-대참사-영상.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">어느 유부녀가 남편 먹일 밥 짓다 지은 시 대참사</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./단독-식당에서-애기밥-찾는-부모가-염치만-없는-게-아닌-이유-포인트.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">식당에서 애기밥 찾는 부모가 염치만 없는 게 아닌 이유</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./충격적인-신발을-너무-싸게-팔았으니-사용중이면-돈-보내라는-판매자-대반전.html" style="text-decoration: none; color: #333; display: block;">
                 <h2 style="margin: 0; font-size: 18px;">신발을 너무 싸게 팔았으니 사용중이면 돈 보내라는 판매자</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./충격반전-피방에서-게임하다-수배범-잡은-썰-꿀잼.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">피방에서 게임하다 수배범 잡은 썰</h2>
+            <a href="./경악-5cm-고3-아들-때문에-고민이-큰-엄마-대참사-진실.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">5cm 고3 아들 때문에 고민이 큰 엄마 대참사</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./완벽-돈-없어서-독립-못-하고-부모님과-산다는-스태프에게-윤성빈이-한-말-대참사-TMI.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">돈 없어서 독립 못 하고 부모님과 산다는 스태프에게 윤성빈이 한 말 대참사</h2>
+            <a href="./현실-쓰레드를-뜨겁게-달군-대전에서-카페하는-황사장-대참사-궁금증.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">쓰레드를 뜨겁게 달군 대전에서 카페하는 황사장 대참사</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./화제의-가세연에서-공개한-김새론이-2015년-시절-김수현과-연애했다는-빼박-증거-사진의-진실-비밀.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">가세연에서 공개한 김새론이 2015년 시절 김수현과 연애했다는 빼박 증거 사진의 진실</h2>
+            <a href="./충격반전-도둑놈들-긴장-한국에도-활성화된-애플-나의-찾기-기능-꿀팁.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">도둑놈들 긴장… 한국에도 활성화된 애플 ‘나의 찾기’ 기능</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./화제-못사는-동네에서-가게-차렸다가-6개월만에-때려친-자영업자-모먼트.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">못사는 동네에서 가게 차렸다가 6개월만에 때려친 자영업자</h2>
-            </a>
-        </li>
-        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./단독-현직-교정직-고움원이-말하는-요즘-교도소-근황-비밀.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">현직 교정직 고움원이 말하는 요즘 교도소 근황</h2>
-            </a>
-        </li>
-        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./공감-한-여자가-노총각보다-차라리-돌싱이-낫다는-이유-순간.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">한 여자가 노총각보다 차라리 돌싱이 낫다는 이유</h2>
+            <a href="./완벽-다소의역마스카라를-잃어버려서-산부인과에-다녀온-여학생-비하인드.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">(다소의역)마스카라를 잃어버려서 산부인과에 다녀온 여학생</h2>
             </a>
         </li></ul>
-        <div class="pagination" style="margin-top: 20px; text-align: center;"><a href="./humor_1.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">◀</a><a href="./humor_1.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">1</a><span style="margin: 0 5px; padding: 5px 10px; background-color: #f0f0f0; border-radius: 3px;">2</span></div>
+        <div class="pagination" style="margin-top: 20px; text-align: center;"><a href="./humor_1.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">◀</a><a href="./humor_1.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">1</a><span style="margin: 0 5px; padding: 5px 10px; background-color: #f0f0f0; border-radius: 3px;">2</span><a href="./humor_3.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">3</a><a href="./humor_3.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">▶</a></div>
     </div>
     
     <!-- 하단 네비게이션 바 추가 -->
@@ -103,6 +103,7 @@
             ">
                 <a href="./humor_1.html" style="color: #333; text-decoration: none; padding: 8px 15px; border-radius: 4px; transition: background-color 0.3s;">◀ 이전</a>
 <span style="color: #333; padding: 8px 15px;">페이지 2</span>
+<a href="./humor_3.html" style="color: #333; text-decoration: none; padding: 8px 15px; border-radius: 4px; transition: background-color 0.3s;">다음 ▶</a>
             </div>
         </div>
     </nav>
