--- a/w/humor_1.html
+++ b/w/humor_1.html
@@ -29,16 +29,56 @@
         <h1>유머 게시판</h1>
         <ul style="list-style: none; padding: 0;">
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./완벽-호감인지-착각인지-알려줘.jpg-기적.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">호감인지 착각인지 알려줘.jpg</h2>
+            <a href="./속보-쏟아지는-악플에-암투병사실-공개한-박성광-아내-이솔아-대반전.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">쏟아지는 악플에 암투병사실 공개한 박성광 아내 이솔아</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./현실-분양-보냈더니-8km-거리를-돌아온-강아지-꿀팁.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">분양 보냈더니 8km 거리를 돌아온 강아지</h2>
+            <a href="./완벽-제미나이-2.5를-써보고-충격받은-웹소설-작가-노하우.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">제미나이 2.5를 써보고 충격받은 웹소설 작가</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./화제의-와이프가-남직원이랑-바람이나서-폐업한-족발집-비하인드.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">와이프가 남직원이랑 바람이나서 폐업한 족발집</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./역대급-아빠랑-비교돼서-남친과-헤어진-판녀-레전드.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">아빠랑 비교돼서 남친과 헤어진 판녀</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./경악-사육장-잠근-채-산불-대피하는-바람에-개-700마리를-죽게한-개농장-주인의-무시무시한-한마디-모먼트.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">사육장 잠근 채 산불 대피하는 바람에 개 700마리를 죽게한 개농장 주인의 무시무시한 한마디</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./대박-손찌검하는-아내를-간단한-방법으로-치료한-남편-레시피.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">손찌검하는 아내를 간단한 방법으로 치료한 남편</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./충격적인-청춘을-보상-받기-위해-신붓감-찾아-일본-간다는-40대-노총각-결말-리뷰.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">청춘을 보상 받기 위해 신붓감 찾아 일본 간다는 40대 노총각 결말</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./완전-남편-비상금-100만원-발견한-블라인드녀-분석.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">남편 비상금 100만원 발견한 블라인드녀</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./화제-한국-케이팝-문화에-문제가-있다는-뉴진스-레시피.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">한국 케이팝 문화에 문제가 있다는 뉴진스</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./단독-국민연금-추천하던-연금박사가-평가하는-이번-국민연금-개혁-TMI.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">국민연금 추천하던 연금박사가 평가하는 이번 국민연금 개혁</h2>
             </a>
         </li></ul>
-        <div class="pagination" style="margin-top: 20px; text-align: center;"><span style="margin: 0 5px; padding: 5px 10px; background-color: #f0f0f0; border-radius: 3px;">1</span></div>
+        <div class="pagination" style="margin-top: 20px; text-align: center;"><span style="margin: 0 5px; padding: 5px 10px; background-color: #f0f0f0; border-radius: 3px;">1</span><a href="./humor_2.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">2</a><a href="./humor_3.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">3</a><a href="./humor_2.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">▶</a></div>
     </div>
     
     <!-- 하단 네비게이션 바 추가 -->
@@ -62,6 +102,7 @@
                 padding: 0 20px;
             ">
                 <span style="color: #333; padding: 8px 15px;">페이지 1</span>
+<a href="./humor_2.html" style="color: #333; text-decoration: none; padding: 8px 15px; border-radius: 4px; transition: background-color 0.3s;">다음 ▶</a>
             </div>
         </div>
     </nav>
