--- a/eee/humor_1.html
+++ b/eee/humor_1.html
@@ -178,53 +178,53 @@
         <h1>유머 게시판</h1>
         <ul style="list-style: none; padding: 0;">
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./공감-통신비-환급금-50만원-지금-바로-조회하세요-근황.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">📱 통신비 환급금 50만원? 지금 바로 조회하세요!</h2>
-            </a>
-        </li>
-        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./현실-놓치지-말아야-할-카드포인트-당신의-숨은-자산을-찾아보세요-리뷰.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">놓치지 말아야 할 카드포인트, 당신의 숨은 자산을 찾아보세요!</h2>
-            </a>
-        </li>
-        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./역대급-2025년-6월-3일-대선-핵심-분석-완벽-가이드-기록.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">2025년 6월 3일 대선, 핵심 분석 완벽 가이드</h2>
-            </a>
-        </li>
-        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./충격반전-종합소득세-환급-완벽-가이드-기준-이유-신청-방법-신고-안-하면-대반전.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">종합소득세 환급 완벽 가이드 기준, 이유, 신청 방법 +신고 안 하면?</h2>
-            </a>
-        </li>
-        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./단독-카카오톡-숨겨진-기능-10가지-40대50대도-쉽게-배우는-필수-팁-기적.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">카카오톡 숨겨진 기능 10가지! 40대50대도 쉽게 배우는 필수 팁</h2>
-            </a>
-        </li>
-        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./필수-50대도-쉽게-따라하는-쿠팡-최저가-쇼핑-비법-기적.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">50대도 쉽게 따라하는 쿠팡 최저가 쇼핑 비법</h2>
-            </a>
-        </li>
-        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./단독-농식품바우처-2025-자격-및-신청-방법-진실.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">농식품바우처 2025 자격 및 신청 방법</h2>
-            </a>
-        </li>
-        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./상상초월-이-앱으로-하루-10만-원-벌-수-있다고-2025년-스마트폰-부업-추천-분석.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">이 앱으로 하루 10만 원 벌 수 있다고? 2025년 스마트폰 부업 추천</h2>
-            </a>
-        </li>
-        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./경악-대출-금리-폭등-이-방법으로-이자-줄이세요-모음.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">대출 금리 폭등! 이 방법으로 이자 줄이세요</h2>
-            </a>
-        </li>
-        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./완벽-꼭-알고계셔야-할-친환경부품-사용-수리비-20-환급방법-사실.html" style="text-decoration: none; color: #333; display: block;">
+            <a href="./대박-꼭-알고계셔야-할-친환경부품-사용-수리비-20-환급방법-영상.html" style="text-decoration: none; color: #333; display: block;">
                 <h2 style="margin: 0; font-size: 18px;">꼭 알고계셔야 할 친환경부품 사용 수리비 20% 환급방법</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./공감-거주자-우선주차-신청방법-및-홈페이지-바로가기-심쿵.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">거주자 우선주차 신청방법 및 홈페이지 바로가기</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./역대급-전국민-대상-비대면-주민등록-사실조사-안하면-과태료-50만원-방문-없이-간편하게-신청하기-꿀잼.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">전국민 대상 비대면 주민등록 사실조사 안하면 과태료 50만원 방문 없이 간편하게 신청하기</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./긴급-통신비-미환급금-숨겨진-내-돈-찾는-방법-소멸되기전에-신청하기-해설.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">통신비 미환급금 숨겨진 내 돈 찾는 방법 소멸되기전에 신청하기</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./필수-건강보험료-나도-몰랐던-과오납-소멸되기-전에-환급금-인터넷으로-간편하게-신청하는-방법-순간.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">건강보험료 나도 몰랐던 과오납 소멸되기 전에 환급금 인터넷으로 간편하게 신청하는 방법</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./초특급-통합-카드포인트-현금전환-계좌입금-신청-방법-TMI.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">통합 카드포인트 현금전환 계좌입금 신청 방법</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./화제-상안검-수술-안과-비용-회복기간-속눈썹-찔림-의료보험-대상-2023-사연.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">상안검 수술 안과 비용 회복기간 속눈썹 찔림 의료보험 대상 2023</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./실화-코골이-해결-방법-줄이는-방법-무호흡-원인-수술-자세-방지법-2023-모먼트.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">코골이 해결 방법 줄이는 방법 무호흡 원인 수술 자세 방지법 2023</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./충격적인-본인부담상한액-초과금-지급신청-방법-총정리-2023-자동으로-돌려받을수-있는게-아닙니다-이야기.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">본인부담상한액 초과금 지급신청 방법 총정리 2023 (자동으로 돌려받을수 있는게 아닙니다)</h2>
+            </a>
+        </li>
+        <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <a href="./논란-주민등록-사실-조사-비대면-진행-방법-2023-진실.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">주민등록 사실 조사 비대면 진행 방법 2023</h2>
             </a>
         </li></ul>
         <div class="pagination" style="margin-top: 20px; text-align: center;"><span style="margin: 0 5px; padding: 5px 10px; background-color: #f0f0f0; border-radius: 3px;">1</span></div>
