--- a/자동차/index.html
+++ b/자동차/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Open Graph 태그 수정 -->
+    <meta property="og:type" content="website">
     <meta property="og:title" content="자동차 수리비 20% 환급받는 사람들">
     <meta property="og:description" content="당신은 자동차 수리비 환급 대상자일까요?">
-    <meta property="og:image" content="./images/car.png">
+    <meta property="og:image" content="https://testpro.site/자동차/images/car.png">
     <meta property="og:url" content="https://testpro.site/자동차">
+    <!-- Twitter 카드 추가 -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="자동차 수리비 20% 환급받는 사람들">
+    <meta name="twitter:description" content="당신은 자동차 수리비 환급 대상자일까요?">
+    <meta name="twitter:image" content="https://testpro.site/자동차/images/car.png">
     <title>자동차 수리비 환급 자격 테스트</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
