--- a/car/11.html
+++ b/car/11.html
@@ -6,7 +6,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="자동차 수리비 20% 환급받는 사람들, 비결은 이것">
     <meta property="og:description" content="당신은 자동차 수리비 환급 대상자일까요? 간단한 테스트로 확인해보세요! 자동차 수리비 지원금을 받을 수 있는 자격 요건을 확인하고, 관련 링크도 함께 제공해드립니다">
-    <meta property="og:image" content="https://testpro.site/자동차/images/car.png">
+    <meta property="og:image" content="https://testpro.site/car/car.png">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="400">
     <meta name="twitter:card" content="summary_large_image">
@@ -18,7 +18,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
 </head>
 <body>
-    <link rel="image_src" href="https://testpro.site/자동차/images/car.png">
+    <link rel="image_src" href="https://testpro.site/car/car.png">
     <div class="ad-container">
         <ins class="adsbygoogle main-ad"
             style="display:block"
