--- a/car/d.html
+++ b/car/d.html
@@ -6,23 +6,23 @@
 
   <title>자동차 수리비 환급 자격 테스트</title>
 
-  <!-- ✅ OG (Open Graph) 미리보기 태그 -->
+  <!-- ✅ OG (Open Graph) 태그 -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="자동차 수리비 20% 환급받는 사람들, 비결은 이것" />
   <meta property="og:description" content="당신은 자동차 수리비 환급 대상자일까요? 간단한 테스트로 확인해보세요!" />
-  <meta property="og:image" content="https://testpro.site/car/car.png" />
+  <meta property="og:image" content="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&amp;fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcvZE8M%2FbtsN7fPuC9x%2FGksZxnHw5e4fCfljxwN5Hk%2Fimg.jpg" />
   <meta property="og:image:width" content="800" />
-  <meta property="og:image:height" content="400" />
+  <meta property="og:image:height" content="420" />
   <meta property="og:url" content="https://testpro.site/a.html" />
 
-  <!-- ✅ Twitter 카드 (추가 지원) -->
+  <!-- ✅ Twitter 카드 -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="자동차 수리비 20% 환급받는 사람들, 비결은 이것" />
   <meta name="twitter:description" content="당신은 자동차 수리비 환급 대상자일까요? 간단한 테스트로 확인해보세요!" />
-  <meta name="twitter:image" content="https://testpro.site/car/car.png" />
+  <meta name="twitter:image" content="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&amp;fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcvZE8M%2FbtsN7fPuC9x%2FGksZxnHw5e4fCfljxwN5Hk%2Fimg.jpg" />
 
-  <!-- ✅ 썸네일 fallback -->
-  <link rel="image_src" href="https://testpro.site/car/car.png" />
+  <!-- ✅ fallback -->
+  <link rel="image_src" href="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&amp;fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcvZE8M%2FbtsN7fPuC9x%2FGksZxnHw5e4fCfljxwN5Hk%2Fimg.jpg" />
 
   <style>
     body {
@@ -46,6 +46,6 @@
   </style>
 </head>
 <body>
-  <img src="https://testpro.site/car/car.png" alt="자동차 수리비 환급" />
+  <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcvZE8M%2FbtsN7fPuC9x%2FGksZxnHw5e4fCfljxwN5Hk%2Fimg.jpg" alt="자동차 수리비 환급" />
 </body>
 </html>
