--- a/car/q.html
+++ b/car/q.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <img src="https://testpro.site/car/car.png" alt="자동차 수리비 환급" style="width:100%; max-width:800px; height:auto; margin:0 auto; display:block;">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="자동차 수리비 20% 환급받는 사람들, 비결은 이것">
-    <meta property="og:description" content="당신은 자동차 수리비 환급 대상자일까요? 간단한 테스트로 확인해보세요! 자동차 수리비 지원금을 받을 수 있는 자격 요건을 확인하고, 관련 링크도 함께 제공해드립니다">
-    <meta property="og:image:width" content="800">
-    <meta property="og:image:height" content="400">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="og:url" content="https://testpro.site/자동차">
     <title>자동차 수리비 환급 자격 테스트</title>
     <link rel="stylesheet" href="style.css">
+    <!-- 카카오 SDK -->
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+    <!-- 구글 애드센스 -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
+    
+    <!-- ✅ OG (Open Graph) 태그 -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="자동차 수리비 20% 환급받는 사람들, 비결은 이것!" />
+    <meta property="og:description" content="당신은 자동차 수리비 환급 대상자일까요? 간단한 테스트로 확인해보세요! 자동차 수리비 지원금을 받을 수 있는 자격 요건을 확인하고, 관련 링크도 함께 제공해드립니다.!" />
+    <meta property="og:image" content="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&amp;fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcvZE8M%2FbtsN7fPuC9x%2FGksZxnHw5e4fCfljxwN5Hk%2Fimg.jpg" />
+    <meta property="og:url" content="https://testpro.site/car/q.html" />
 </head>
 <body>
     <div class="ad-container">
@@ -80,14 +81,14 @@
                 <div class="loading-spinner"></div>
             </div>
             
-            <!-- 팝업 광고 -->
+            <!-- 팝업 광고 수정 -->
             <div class="popup-ad-container">
                 <ins class="adsbygoogle popup-ad"
-                     style="display:inline-block"
+                     style="display:block"
                      data-ad-client="ca-pub-9374368296307755"
                      data-ad-slot="3201247599"
-                     data-ad-format="rectangle"
-                     data-full-width-responsive="false"></ins>
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
             </div>
         </div>
     </div>
