--- a/b/2.html
+++ b/b/2.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11438616604"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'AW-11438616604');
-    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자동차 수리비 20% 환급받는 사람들, 비결은 이것!</title>
+    <title>하루 10만 원, 진짜 가능? 2025년 최신 스마트폰 부업 앱 TOP 5 공개</title>
+    <link rel="stylesheet" href="style.css">
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="image-container">
-        <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcvZE8M%2FbtsN7fPuC9x%2FGksZxnHw5e4fCfljxwN5Hk%2Fimg.jpg" alt="표시된 이미지">
-    </div>    
+        <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FInjQ0%2FbtsN8Uw4pEi%2F4BFMk8p0rKVqehfNMgQTvk%2Fimg.jpg" alt="표시된 이미지">
+    </div>        
     <!-- 상단 광고 -->
     <div class="ad-container">
         <ins class="adsbygoogle main-ad"
@@ -34,9 +26,9 @@
         <div class="test-container">
             <!-- 시작 페이지 -->
             <div class="start-page" id="startPage">
-                <h1 class="main-title">전국 숙박 할인권<br>받을 수 있는지 확인하세요!</h1>
+                <h1 class="main-title">하루 10만 원, 진짜 가능? 2025년 최신 스마트폰 부업 앱 TOP 5 공개</h1>
                 <div class="start-img"></div>
-                <p class="sub-title">최대 7만원 숙박 할인!<br>최대 7만원 숙박 할인, 나도 받을 수 있을까? 1분 자격 테스트로 내 여행 할인권을 바로 확인하세요! 전국 어디서나 사용 가능한 특별 혜택, 지금 바로 체크하고 알뜰하게 여행을 즐기세요</p>
+                <p class="sub-title">스마트폰만 있으면 나도 부업 가능? 1분 테스트로 내게 꼭 맞는 수익형 앱을 바로 추천받아보세요! 지금 시작해서 숨겨진 수입의 기회를 잡으세요.</p>
                 <button class="start-btn">테스트 시작하기</button>
                 <div class="share-btn">
                     <div class="kakao-share">
@@ -62,11 +54,12 @@
 
             <!-- 결과 페이지 -->
             <div class="result-page hidden" id="resultPage">
-                <h2 class="result-title">자동차 수리비 환급 자격 분석 결과</h2>
+                <h2 class="result-title">스마트폰 부업 앱 추천 결과</h2>
                 <div class="result-img"></div>
                 <div class="result-content"></div>
                 <div class="result-buttons">
-                    <button class="retry-btn" onclick="location.href='https://testpro.site'">다른 테스트 하기</button>
+                    <button class="retry-btn">테스트 다시하기</button>
+                    <a href="https://testpro.site" class="other-test-btn">다른 테스트 하기</a>
                     <div class="kakao-share">
                         <div class="kakao-icon"></div>
                         <span>결과 공유하기</span>
@@ -80,7 +73,7 @@
     <div class="analysis-popup hidden" id="analysisPopup">
         <div class="popup-content">
             <div class="analysis-header">
-                <div class="analysis-text">신청 자격 분석중입니다...</div>
+                <div class="analysis-text">결과값 분석중입니다...</div>
                 <div class="countdown">7</div>
                 <div class="loading-spinner"></div>
             </div>
