--- a/j/6.html
+++ b/j/6.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11438616604"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'AW-11438616604');
-    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자동차 수리비 20% 환급받는 사람들, 비결은 이것!</title>
-    <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
+
+    <title>정부가 쏜다! 전국 숙박 할인권으로 여행가는 달</title>
     <link rel="stylesheet" href="style.css">
+    <!-- 카카오 SDK -->
+    <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+    <!-- 구글 애드센스 -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="image-container">
-        <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcvZE8M%2FbtsN7fPuC9x%2FGksZxnHw5e4fCfljxwN5Hk%2Fimg.jpg" alt="표시된 이미지">
-    </div>    
+        <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fch8a99%2FbtsN9HYgdMd%2FC4ePZELkKsZaXZviVa1KX1%2Fimg.png" alt="표시된 이미지">
+    </div>
+    <script>
+        document.addEventListener('contextmenu', function(e) {
+            if (e.target.tagName === 'IMG') {
+                e.preventDefault();
+            }
+        });
+    </script>
     <!-- 상단 광고 -->
     <div class="ad-container">
         <ins class="adsbygoogle main-ad"
@@ -62,7 +64,7 @@
 
             <!-- 결과 페이지 -->
             <div class="result-page hidden" id="resultPage">
-                <h2 class="result-title">자동차 수리비 환급 자격 분석 결과</h2>
+                <h2 class="result-title">숙박 할인권 자격 분석 결과</h2>
                 <div class="result-img"></div>
                 <div class="result-content"></div>
                 <div class="result-buttons">
