--- a/d/dd.html
+++ b/d/dd.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>정부가 쏜다! 전국 숙박 할인권으로 여행가는 달</title>
+    <title>내 돈인데 안 받으면 손해! 통신비 미환급금 신청 꿀팁 공개</title>
     <link rel="stylesheet" href="style.css">
     <!-- 카카오 SDK -->
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
@@ -12,16 +12,6 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="image-container">
-        <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbfasBm%2FbtsN9FF62xk%2FVfHFCL2MfRDwrPw3CBHoqK%2Fimg.png" alt="표시된 이미지">
-    </div>
-    <script>
-        document.addEventListener('contextmenu', function(e) {
-            if (e.target.tagName === 'IMG') {
-                e.preventDefault();
-            }
-        });
-    </script>
     <!-- 상단 광고 -->
     <div class="ad-container">
         <ins class="adsbygoogle main-ad"
@@ -36,9 +26,9 @@
         <div class="test-container">
             <!-- 시작 페이지 -->
             <div class="start-page" id="startPage">
-                <h1 class="main-title">당신이 받을 수 있는<br>모든 정부지원금 혜택 알아보기</h1>
+                <h1 class="main-title">내 돈인데 안 받으면 손해! 통신비 미환급금 신청 꿀팁 공개</h1>
                 <div class="start-img"></div>
-                <p class="sub-title">매월 최대 70만원까지 받을 수 있는 혜택!<br>한 달에 최대 70만 원 지원금, 나도 받을 수 있을까? 1분만 투자해 간단한 자격 테스트로 내게 꼭 맞는 정부 지원금을 바로 확인하세요! 놓치면 후회할 수 있는 내 권리, 지금 바로 확인해보세요</p>
+                <p class="sub-title">혹시 나도 통신비 환급금을 놓치고 있었을까? 본인 명의 휴대폰만 있으면 1분 만에 숨겨진 내 돈을 바로 확인하고 간편하게 신청할 수 있습니다. 지금 바로 내 환급금 찾아가세요!</p>
                 <button class="start-btn">테스트 시작하기</button>
                 <div class="share-btn">
                     <div class="kakao-share">
@@ -64,7 +54,7 @@
 
             <!-- 결과 페이지 -->
             <div class="result-page hidden" id="resultPage">
-                <h2 class="result-title">숙박 할인권 자격 분석 결과</h2>
+                <h2 class="result-title">통신비 미환급금 신청 결과</h2>
                 <div class="result-img"></div>
                 <div class="result-content"></div>
                 <div class="result-buttons">
@@ -82,7 +72,7 @@
     <div class="analysis-popup hidden" id="analysisPopup">
         <div class="popup-content">
             <div class="analysis-header">
-                <div class="analysis-text">신청 자격 분석중입니다...</div>
+                <div class="analysis-text">결과값 분석중입니다...</div>
                 <div class="countdown">7</div>
                 <div class="loading-spinner"></div>
             </div>
