--- a/j/jj.html
+++ b/j/jj.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>정부가 쏜다! 전국 숙박 할인권으로 여행가는 달</title>
+    <title>농촌에서 살아보기! 매월 30만원 지원에 숙소까지 무상제공</title>
     <link rel="stylesheet" href="style.css">
     <!-- 카카오 SDK -->
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
@@ -12,16 +12,6 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="image-container">
-        <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FYR2Y6%2FbtsN7ZsUnaW%2FGbElX3kQB1rbMVDrmgjyW0%2Fimg.png" alt="표시된 이미지">
-    </div>
-    <script>
-        document.addEventListener('contextmenu', function(e) {
-            if (e.target.tagName === 'IMG') {
-                e.preventDefault();
-            }
-        });
-    </script>
     <!-- 상단 광고 -->
     <div class="ad-container">
         <ins class="adsbygoogle main-ad"
@@ -36,9 +26,9 @@
         <div class="test-container">
             <!-- 시작 페이지 -->
             <div class="start-page" id="startPage">
-                <h1 class="main-title">조기폐차 지원금<br>받을 수 있는지 확인하세요!</h1>
+                <h1 class="main-title">귀농·귀촌 체험<br>지원금 받고 새로운 삶 시작하기!</h1>
                 <div class="start-img"></div>
-                <p class="sub-title">최대 800만원 지원금!<br>내 차가 조기폐차 보조금 대상인지 확인해보세요. 1분만에 간단하게 자격조건을 체크할 수 있습니다.</p>
+                <p class="sub-title">귀농·귀촌 체험하고 매월 지원금까지! 1분만에 신청 자격을 확인해보세요. 도시를 떠나 새로운 삶을 시작할 수 있는 기회!.</p>
                 <button class="start-btn">테스트 시작하기</button>
                 <div class="share-btn">
                     <div class="kakao-share">
@@ -64,7 +54,7 @@
 
             <!-- 결과 페이지 -->
             <div class="result-page hidden" id="resultPage">
-                <h2 class="result-title">숙박 할인권 자격 분석 결과</h2>
+                <h2 class="result-title">귀농·귀촌 체험 지원금 자격 분석 결과</h2>
                 <div class="result-img"></div>
                 <div class="result-content"></div>
                 <div class="result-buttons">
