--- a/a/aa.html
+++ b/a/aa.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11438616604"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'AW-11438616604');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>정부가 쏜다! 전국 숙박 할인권으로 여행가는 달</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- 카카오 SDK -->
+    <title>자동차 수리비 20% 환급받는 사람들, 비결은 이것!</title>
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
-    <!-- 구글 애드센스 -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="image-container">
-        <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fb3rqrG%2FbtsN8GF836Y%2FSfJZiDitKOkA5fcJsOz620%2Fimg.png" alt="표시된 이미지">
-    </div>
-    <script>
-        document.addEventListener('contextmenu', function(e) {
-            if (e.target.tagName === 'IMG') {
-                e.preventDefault();
-            }
-        });
-    </script>
     <!-- 상단 광고 -->
     <div class="ad-container">
         <ins class="adsbygoogle main-ad"
@@ -36,9 +31,9 @@
         <div class="test-container">
             <!-- 시작 페이지 -->
             <div class="start-page" id="startPage">
-                <h1 class="main-title">전국 숙박 할인권<br>받을 수 있는지 확인하세요!</h1>
+                <h1 class="main-title">자동차 수리비 20% 환급받는 사람들의 비결!</h1>
                 <div class="start-img"></div>
-                <p class="sub-title">최대 7만원 숙박 할인!<br>최대 7만원 숙박 할인, 나도 받을 수 있을까? 1분 자격 테스트로 내 여행 할인권을 바로 확인하세요! 전국 어디서나 사용 가능한 특별 혜택, 지금 바로 체크하고 알뜰하게 여행을 즐기세요</p>
+                <p class="sub-title">내가 자동차 수리비를 돌려받을 수 있다고? 1분만 투자해 간단 테스트로 환급 대상 여부를 바로 확인해보세요! 놓치면 후회할 수 있는 절호의 기회, 지금 바로 체크하세요</p>
                 <button class="start-btn">테스트 시작하기</button>
                 <div class="share-btn">
                     <div class="kakao-share">
@@ -64,7 +59,7 @@
 
             <!-- 결과 페이지 -->
             <div class="result-page hidden" id="resultPage">
-                <h2 class="result-title">숙박 할인권 자격 분석 결과</h2>
+                <h2 class="result-title">자동차 수리비 환급 자격 분석 결과</h2>
                 <div class="result-img"></div>
                 <div class="result-content"></div>
                 <div class="result-buttons">
