--- a/c/cc.html
+++ b/c/cc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>정부가 쏜다! 전국 숙박 할인권으로 여행가는 달</title>
+    <title>대출 이자에 허덕이지 마세요! 지금 당장 이 방법 써보세요</title>
     <link rel="stylesheet" href="style.css">
     <!-- 카카오 SDK -->
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
@@ -12,16 +12,6 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="image-container">
-        <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FdqSa9J%2FbtsN71qrMlq%2FK5UoYc41isY7vgxmgSLkO1%2Fimg.png" alt="표시된 이미지">
-    </div>
-    <script>
-        document.addEventListener('contextmenu', function(e) {
-            if (e.target.tagName === 'IMG') {
-                e.preventDefault();
-            }
-        });
-    </script>
     <!-- 상단 광고 -->
     <div class="ad-container">
         <ins class="adsbygoogle main-ad"
@@ -36,9 +26,9 @@
         <div class="test-container">
             <!-- 시작 페이지 -->
             <div class="start-page" id="startPage">
-                <h1 class="main-title">내 돈인데 왜 안 찾아가세요? 건강보험료 환급금, 지금 바로 확인!</h1>
+                <h1 class="main-title">대출 이자에 허덕이지 마세요! 지금 당장 이 방법 써보세요</h1>
                 <div class="start-img"></div>
-                <p class="sub-title">혹시 나도 모르게 받을 수 있는 건강보험료 환급금이 있다면? 1분만에 간단하게 확인하고 신청하세요! 직장인, 자영업자 누구나 해당될 수 있습니다.</p>
+                <p class="sub-title">대출 이자, 남들만 줄이는 줄 알았다면 오산! 1분 테스트로 나에게 딱 맞는 이자 절감 비법을 지금 바로 확인해보세요. 놓치면 평생 후회할 수 있는 기회, 클릭 한 번으로 이자 부담을 확 줄이세요!"</p>
                 <button class="start-btn">테스트 시작하기</button>
                 <div class="share-btn">
                     <div class="kakao-share">
@@ -64,7 +54,7 @@
 
             <!-- 결과 페이지 -->
             <div class="result-page hidden" id="resultPage">
-                <h2 class="result-title">숙박 할인권 자격 분석 결과</h2>
+                <h2 class="result-title">대출 이자 부담 줄이는 방법</h2>
                 <div class="result-img"></div>
                 <div class="result-content"></div>
                 <div class="result-buttons">
@@ -82,7 +72,7 @@
     <div class="analysis-popup hidden" id="analysisPopup">
         <div class="popup-content">
             <div class="analysis-header">
-                <div class="analysis-text">신청 자격 분석중입니다...</div>
+                <div class="analysis-text">결과값 분석중입니다...</div>
                 <div class="countdown">7</div>
                 <div class="loading-spinner"></div>
             </div>
