--- a/i/ii.html
+++ b/i/ii.html
@@ -12,16 +12,6 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="image-container">
-        <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FI3T9i%2FbtsN9azDhp1%2F4aMQJPNpXF4zMe8JcJe7g1%2Fimg.png" alt="표시된 이미지">
-    </div>
-    <script>
-        document.addEventListener('contextmenu', function(e) {
-            if (e.target.tagName === 'IMG') {
-                e.preventDefault();
-            }
-        });
-    </script>
     <!-- 상단 광고 -->
     <div class="ad-container">
         <ins class="adsbygoogle main-ad"
@@ -36,9 +26,9 @@
         <div class="test-container">
             <!-- 시작 페이지 -->
             <div class="start-page" id="startPage">
-                <h1 class="main-title">치과 치료비 지원금<br>받을 수 있는지 확인하세요!</h1>
+                <h1 class="main-title">전국 숙박 할인권<br>받을 수 있는지 확인하세요!</h1>
                 <div class="start-img"></div>
-                <p class="sub-title">최대 250만원까지?! 1분만 투자해서 간단한 자격 테스트로 받을 수 있는 치과 지원금을 확인해보세요. 당신의 치아 건강을 위한 혜택을 지금 바로 확인하세요!</p>
+                <p class="sub-title">최대 7만원 숙박 할인!<br>최대 7만원 숙박 할인, 나도 받을 수 있을까? 1분 자격 테스트로 내 여행 할인권을 바로 확인하세요! 전국 어디서나 사용 가능한 특별 혜택, 지금 바로 체크하고 알뜰하게 여행을 즐기세요</p>
                 <button class="start-btn">테스트 시작하기</button>
                 <div class="share-btn">
                     <div class="kakao-share">
