--- a/mbti/index.html
+++ b/mbti/index.html
@@ -28,6 +28,7 @@
 <body>
     <!-- 언어 선택 메뉴 -->
     <div class="language-selector">
+        <label for="language-select">Language Selection</label>
         <select id="language-select" onchange="changeLanguage()">
             <option value="ko">한국어</option>
             <option value="en">English</option>
